tests/negative/neg_pr1162_removed_null_statement.safe
package neg_PR1162_Removed_Null_Statement

   function consume

      null;
